--- a/documentation/classes/InstagramAPI-Request-People.html
+++ b/documentation/classes/InstagramAPI-Request-People.html
@@ -1964,7 +1964,7 @@ earliest followings: 'date_followed_earliest'.</p></section></dd>
                     <span class="phpdocumentor-signature__argument">
             [,                 <span class="phpdocumentor-signature__argument__name">$searchSurface</span> :
                 <span class="phpdocumentor-signature__argument__return-type">mixed</span>
-                 = <span class="phpdocumentor-signature__argument__default-value">&#039;user_search_page&#039;</span> ]            </span>
+                 = <span class="phpdocumentor-signature__argument__default-value">&#039;user_serp&#039;</span> ]            </span>
                 )
         : <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-SearchUserResponse.html"><abbr title="\InstagramAPI\Response\SearchUserResponse">SearchUserResponse</abbr></a></span>
     </code>
@@ -1992,7 +1992,7 @@ from a previous call to get more results.</p></section></dd>
                             <dt class="phpdocumentor-argument-list__entry">
                     <span class="phpdocumentor-signature__argument__name">$searchSurface</span>
                     : <span class="phpdocumentor-signature__argument__return-type">mixed</span>
-                     = <span class="phpdocumentor-signature__argument__default-value">&#039;user_search_page&#039;</span>                </dt>
+                     = <span class="phpdocumentor-signature__argument__default-value">&#039;user_serp&#039;</span>                </dt>
                 <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"></section></dd>
                     </dl>
     
