--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -561,6 +561,8 @@
                 <dd>StickerTrayResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-TotpCodeResponse.html"><abbr title="\InstagramAPI\Response\TotpCodeResponse">TotpCodeResponse</abbr></a></dt>
                 <dd>TotpCodeResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-TopSearchResponse.html"><abbr title="\InstagramAPI\Response\TopSearchResponse">TopSearchResponse</abbr></a></dt>
+                <dd>TopSearchResponse.</dd>
             
                     </dl>
     
