--- a/documentation/namespaces/instagramapi-response-model.html
+++ b/documentation/namespaces/instagramapi-response-model.html
@@ -622,6 +622,8 @@
                 <dd>LauncherSyncParam.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-StickerTray.html"><abbr title="\InstagramAPI\Response\Model\StickerTray">StickerTray</abbr></a></dt>
                 <dd>StickerTray.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-MediaGrid.html"><abbr title="\InstagramAPI\Response\Model\MediaGrid">MediaGrid</abbr></a></dt>
+                <dd>MediaGrid.</dd>
             
                     </dl>
     
