--- a/documentation/packages/Default.html
+++ b/documentation/packages/Default.html
@@ -1536,6 +1536,10 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>StickerTrayResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-TotpCodeResponse.html"><abbr title="\InstagramAPI\Response\TotpCodeResponse">TotpCodeResponse</abbr></a></dt>
                 <dd>TotpCodeResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-MediaGrid.html"><abbr title="\InstagramAPI\Response\Model\MediaGrid">MediaGrid</abbr></a></dt>
+                <dd>MediaGrid.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-TopSearchResponse.html"><abbr title="\InstagramAPI\Response\TopSearchResponse">TopSearchResponse</abbr></a></dt>
+                <dd>TopSearchResponse.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
