--- a/documentation/reports/errors.html
+++ b/documentation/reports/errors.html
@@ -79,7 +79,7 @@
     <table class="phpdocumentor-table_of_contents">
                                             <tr>
                     <td class="phpdocumentor-cell"><a href="#src/Request/Discover.php">src/Request/Discover.php</a></td>
-                    <td class="phpdocumentor-cell">1</td>
+                    <td class="phpdocumentor-cell">2</td>
                 </tr>
                                                             <tr>
                     <td class="phpdocumentor-cell"><a href="#src/Request/Hashtag.php">src/Request/Hashtag.php</a></td>
@@ -92,6 +92,10 @@
                                                             <tr>
                     <td class="phpdocumentor-cell"><a href="#src/Request/People.php">src/Request/People.php</a></td>
                     <td class="phpdocumentor-cell">5</td>
+                </tr>
+                                                            <tr>
+                    <td class="phpdocumentor-cell"><a href="#src/Request/Music.php">src/Request/Music.php</a></td>
+                    <td class="phpdocumentor-cell">1</td>
                 </tr>
                                     </table>
     
@@ -107,6 +111,11 @@
                 </tr>
             </thead>
             <tbody>
+                            <tr>
+                    <td class="phpdocumentor-cell">ERROR</td>
+                    <td class="phpdocumentor-cell">0</td>
+                    <td class="phpdocumentor-cell">Tag &quot;see&quot; with body &quot;@see examples/paginateWithExclusion.php For a rank token example (but with a different type of exclude list).&quot; has error &quot;\InstagramAPI\Request\examples/paginateWithExclusion.php&quot; is not a valid Fqsen.</td>
+                </tr>
                             <tr>
                     <td class="phpdocumentor-cell">ERROR</td>
                     <td class="phpdocumentor-cell">0</td>
@@ -191,6 +200,24 @@
                     <td class="phpdocumentor-cell">0</td>
                     <td class="phpdocumentor-cell">Tag &quot;see&quot; with body &quot;@see examples/rankTokenUsage.php For an example.&quot; has error &quot;\InstagramAPI\Request\examples/rankTokenUsage.php&quot; is not a valid Fqsen.</td>
                 </tr>
+                            <tr>
+                    <td class="phpdocumentor-cell">ERROR</td>
+                    <td class="phpdocumentor-cell">0</td>
+                    <td class="phpdocumentor-cell">Tag &quot;see&quot; with body &quot;@see examples/paginateWithExclusion.php For an example.&quot; has error &quot;\InstagramAPI\Request\examples/paginateWithExclusion.php&quot; is not a valid Fqsen.</td>
+                </tr>
+                        </tbody>
+        </table>
+            <a id="src/Request/Music.php"></a>
+        <h3><abbr title="src/Request/Music.php">Music.php</abbr></h3>
+        <table>
+            <thead>
+                <tr>
+                    <th class="phpdocumentor-heading">Type</th>
+                    <th class="phpdocumentor-heading">Line</th>
+                    <th class="phpdocumentor-heading">Description</th>
+                </tr>
+            </thead>
+            <tbody>
                             <tr>
                     <td class="phpdocumentor-cell">ERROR</td>
                     <td class="phpdocumentor-cell">0</td>
